--- a/GymSystemBLL/GymSystemBLL.csproj
+++ b/GymSystemBLL/GymSystemBLL.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GymSystemBLL\GymSystemBLL.csproj" />
+    <ProjectReference Include="..\GymSystemDAL\GymSystemDAL.csproj" />
   </ItemGroup>
 
 </Project>
