--- a/GymSystem/appsettings.json
+++ b/GymSystem/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=GymSystem;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
